force-app/main/default/objects/ErrorLog__c/ErrorLog__c.object-meta.xml
<CustomObject>
    <description>This Object is used to store the Error Log.</description>
    <label>ErrorLog</label>
    <nameField>
        <displayFormat>EL-{0000000}</displayFormat>
        <label>ErrorLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>