force-app/main/default/objects/ErrorLog__c/fields/Error_Brief__c.field-meta.xml
<CustomField>
    <fullName>Error_Brief__c</fullName>
    <description>Text field to store the  error in brief.</description>
    <label>Error Brief</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>