force-app/main/default/objects/ErrorLog__c/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <description>A  text type field to store the description of the error.</description>
    <label>Error Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>