force-app/main/default/objects/ErrorLog__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Component Error</fullName>
            </value>
            <value>
                <fullName>Backend Process Error</fullName>
            </value>
            <value>
                <fullName>Integration Error</fullName>
            </value>
            <value>
                <fullName>Other Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>