force-app/main/default/objects/ErrorLog__c/fields/Module_ID__c.field-meta.xml
<CustomField>
    <fullName>Module_ID__c</fullName>
    <description>A text field used to store the name of the error module.</description>
    <label>Module ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>